<?xml version="1.0"?>
<package format="2">
  <name>rpi_server_node</name>
  <version>0.0.0</version>
  <description>The rpi_server_node package</description>

  <maintainer email="roselab@todo.todo">roselab</maintainer>


  <license>TODO</license>


  <buildtool_depend>catkin</buildtool_depend>


  <exec_depend>rospy</exec_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
